📝 docs: Add documatation for List Openings
